--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,13 @@
 <DOCTYPE html>
 <html lang="en">
 	<head>
+        <script type="text/javascript" src="/static/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/jquery-ui.js"></script>
+        <script type="text/javascript" src="/static/knockout.js"></script>
+        <script type="text/javascript" src="/static/tmp.js"></script>
+        <script type="text/javascript" src="/static/knockout-sortable.js"></script>
         <!-- Latest compiled and minified CSS -->
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
         <!-- Latest compiled and minified JavaScript -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
-        <script src="/static/knockout.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	</head>
